# ardrone_optitrack_demo

./: README.md
Windows_Scripts/: launchROS.bat  launchROSMaster.bat
demo/: CMakeLists.txt  README.md  package.xml
demo/launch/: demo.launch
demo_feedback_signals/: CMakeLists.txt  README.md  package.xml
demo_feedback_signals/src/: demo_sounds_server.cpp~
demo_feedback_signals/srv/: demo_sounds.srv
direction_beta/: CMakeLists.txt  package.xml
direction_beta/launch/: control_node.launch
direction_beta/msg/: direction_msgs.msg
direction_beta/src/: control_node.cpp
drone_control_position/: CMakeLists.txt  README.md  package.xml
drone_control_position/launch/: IDSIA_Drones_config.txt  control_node.launch  sim_control_node.launch
drone_control_position/src/: PID.cpp  YawControl.cpp  control_node-copy.cpp  control_node.cpp  quaternions2angles.cpp  sim_control_node-copy.cpp  sim_control_node.cpp
drone_feedback_signals/: CMakeLists.txt  CMakeLists.txt~  package.xml
drone_feedback_signals/src/: demo_sounds_server.cpp  feedback_signals.cpp  feedback_signals.cpp~  leds_feedback_signals.cpp
drone_feedback_signals/srv/: DetectObject.srv~
drone_following_leader/: CMakeLists.txt  README.md  package.xml
drone_following_leader/launch/: following_node.launch  sim_following_node.launch
drone_following_leader/src/: following_leader.cpp  leader_position.cpp  leader_selector.cpp
messages/: CMakeLists.txt  README.md  package.xml
messages/msg/: demo_info.msg  drone_control_info.msg  send_control_data.msg
optitrack_gestures/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
optitrack_gestures/launch/: ardrone_demo.launch  basic_gestures.launch  basic_gestures.launch~  demo.launch
optitrack_gestures/src/: basic_gestures.cpp~  demo.cpp  takeoff-land.cpp
send_control_position/: CMakeLists.txt  README.md  package.xml
send_control_position/src/: control_data.cpp
simulation_worlds/: CMakeLists.txt  package.xml
simulation_worlds/Media/models/: black_cone.dae  blue_cone.dae  cube_person.dae  green_cone.dae  person.dae  person_marker.dae  pole.dae  walls.dae  walls2.dae  yellow_cone.dae
simulation_worlds/Media/models/stl/: cube_person.stl  green_cone.stl  person_marker.stl  planes.stl  pole.stl  walls.stl  walls2.stl
simulation_worlds/launch/: following_test.launch  obstacles.launch  sala_movimento.launch
simulation_worlds/models/: ground_plane.model  walls.model
simulation_worlds/worlds/: following_test.world  obstacles.world  sala_movimento.world
visual_object_detector/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
visual_object_detector/scripts/: detector_node.py  detector_node.py~
windows_scripts/: README Optitrack.txt  launchROS - Copy.bat  launchROS Master.bat
