<?xml version="1.0"?>
<package>
  <name>demo</name>
  <version>0.0.0</version>
  <description>The demo package</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jrodriguezg@idsia.ch">Juan Rodriguez</maintainer>

  <license>GPLv3</license>

  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>drone_control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>drone_control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
