<?xml version="1.0"?>
<package>
  <name>optitrack_gestures</name>
  <version>0.0.0</version>
  <description>The optitrack_gestures package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jrodriguez@idsia.ch">Juan Rodriguez</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>visual_object_detector</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sound_play</run_depend> 
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>visual_object_detector</run_depend>  


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
